Moved header up to prevent scroll on smaller screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@ body {
 }
 
 .hero-unit{
-  margin-top: 60px;
+  margin-top: 20px;
   background-color: transparent;
 }
 
